--- a/.github/workflows/scheduled-cleanup.yml
+++ b/.github/workflows/scheduled-cleanup.yml
@@ -2,7 +2,7 @@ name: Scheduled Database Cleanup (Bun)
 
 on:
   schedule:
-    - cron: '0 2 * * *'
+    - cron: '59 23 * * 0'
   workflow_dispatch:
 
 jobs:
