--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@neondatabase/serverless": "^0.10.4",
 		"better-auth": "^1.2.7",
 		"cloudinary": "^2.6.0",
+		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.40.1",
 		"pg": "^8.15.6",
 		"prettier-plugin-tailwindcss": "^0.6.11"
